--- a/src/main/webapp/resources/css/shipperInfoEntryScreen.css
+++ b/src/main/webapp/resources/css/shipperInfoEntryScreen.css
@@ -13,16 +13,16 @@ and open the template in the editor.
 }
 
 input[type=text] {
-    font-size:24px
+    font-size:20px
 }
 
 .data{
    margin: 40px auto;
-   width:1200px;
+   width:1100px;
 }
 
 .mediumFont {
-    font-size:24px;
+    font-size:20px;
 }
 
 .column1 {
@@ -36,4 +36,23 @@ input[type=text] {
 }
 .column4{
     width:20%;
+}
+
+.c2-1 {
+    width:18%
+}
+.c2-2 {
+    width:47%;
+}
+.c2-3 {
+    width:15%;
+}
+.c2-4{
+    width:20%;
+}
+
+.message {
+    color: red;
+    display: inline-block;
+    font-size: 18px;
 }
